# PiZillaSDK

./: .gitignore  build_all.sh  tools.sh
workspace/include/libpiziot/: def_func.h  def_libpiziot_stream_in.h  def_libpiziot_stream_out.h  def_pizcam.h  def_pizcms.h  def_pizgclient.h  def_pizgserver.h  def_pizhtserver.h  def_piznas.h  def_pizrelay.h  def_piztest.h  def_pizuidserver.h  def_pizumbo.h  def_video_type.h
workspace/include/libpiziot/libpizbsp_hi35xx/: def_hi3518_type.h
workspace/include/libpiziot/libpiziot_core_cms/: def_libpiziot_core_cms.h
workspace/include/libpiziot/libpiziot_core_gclient/: def_libpiziot_core_gclient.h
workspace/include/libpiziot/libpiziot_core_gserver/: def_libpiziot_core_gserver.h
workspace/include/libpiziot/libpiziot_core_htserver/: def_libpiziot_core_htserver.h
workspace/include/libpiziot/libpiziot_core_ipcamera/: def_libpiziot_core_ipcamera.h
workspace/include/libpiziot/libpiziot_core_nas/: def_libpiziot_core_nas.h
workspace/include/libpiziot/libpiziot_core_relay/: def_libpiziot_core_relay.h
workspace/include/libpiziot/libpiziot_core_test/: def_libpiziot_core_test.h
workspace/include/libpiziot/libpiziot_core_uidserver/: def_libpiziot_core_uidserver.h
workspace/include/libpiziot/libpiziot_core_umbo/: def_libpiziot_core_umbo.h
workspace/include/libpiziot/libpiziot_file_avi/: def_libpiziot_file_avi.h
workspace/include/libpiziot/libpiziot_mfc_gui/: def_libpiziot_mfc_dautptr.h  def_libpiziot_mfc_gui.h  def_libpiziot_mfc_gui_class.h
workspace/include/libpiziot/libpiziot_mfc_sql/: def_libpiziot_mfc_sql.h
workspace/include/libpiziot/libpiziot_net_rtsp/: def_libpiziot_net_rtsp.h
workspace/include/libpiziot/libpiziot_os/: def_libpiziot_os.h  def_libpiziot_os_aes.h  def_libpiziot_os_debug.h  def_libpiziot_os_fifo.h  def_libpiziot_os_file.h  def_libpiziot_os_if.h  def_libpiziot_os_mem.h  def_libpiziot_os_misc.h  def_libpiziot_os_mmap.h  def_libpiziot_os_mutex.h  def_libpiziot_os_net.h  def_libpiziot_os_platform.h  def_libpiziot_os_pthread.h  def_libpiziot_os_resource.h  def_libpiziot_os_signal.h  def_libpiziot_os_socket.h  def_libpiziot_os_time.h  def_libpiziot_os_type.h  def_libpiziot_os_windows.h
workspace/include/libpiziot/libpiziot_p2p/: def_libpiziot_p2p_clientsdk.h  def_libpiziot_p2p_common.h  def_libpiziot_p2p_core.h  def_libpiziot_p2p_serversdk.h
workspace/lib/AndroidStudio/: lib.txt
workspace/lib/Xcode/: lib.txt
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/: build.gradle
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/: CMakeLists.txt  build.gradle
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/androidTest/java/com/pppiziot/www/libpiziot_core_cms/: ExampleInstrumentedTest.java
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/: AndroidManifest.xml
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/cpp/: piziot_core_cms.cpp
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/java/com/pppiziot/www/libpiziot_core_cms/: MainActivity.java
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/res/layout/: activity_main.xml  content_main.xml
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/res/menu/: menu_main.xml
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/main/res/values/: strings.xml
workspace/libpiziot_core_cms/AndroidStudio/libpiziot_core_cms/app/src/test/java/com/pppiziot/www/libpiziot_core_cms/: ExampleUnitTest.java
workspace/libpiziot_core_cms/Linux/: .cproject  .project
workspace/libpiziot_core_cms/Linux/BCM28XX/: makefile
workspace/libpiziot_core_cms/Linux/BCM28XX_FEDORA27/: makefile
workspace/libpiziot_core_cms/Linux/BCM28XX_RASPBIAN9/: makefile
workspace/libpiziot_core_cms/Linux/HI3518E/: makefile
workspace/libpiziot_core_cms/Linux/HI3518EV2/: makefile
workspace/libpiziot_core_cms/Linux/HI3520D/: makefile
workspace/libpiziot_core_cms/Linux/RK3328_UBM1604_Debug/: makefile
workspace/libpiziot_core_cms/Linux/RK3328_UBM1604_Release/: makefile
workspace/libpiziot_core_cms/Linux/RTL8196/: makefile
workspace/libpiziot_core_cms/Linux/RTL8197/: makefile
workspace/libpiziot_core_cms/Linux/RTL8881/: makefile
workspace/libpiziot_core_cms/Linux/include/: config_android.h  config_bcm28xx.h  config_hi3518e.h  config_hi3518ev2.h  config_hi3520d.h  config_mt7688.h  config_rk3328.h  config_rtl8196.h  config_rtl8197.h  config_rtl8881.h  config_x86.h  config_xcode.h  menu_config.h
workspace/libpiziot_core_ipcamera/Linux/: .cproject  .project
workspace/libpiziot_core_nas/Linux/: .cproject  .project
workspace/pizcam/Linux/: .cproject  .project
workspace/pizcam/Linux/BCM28XX/: makefile  (+1 more)
workspace/pizcms/AndroidStudio/PIZCms/app/: CMakeLists.txt  build.gradle
workspace/pizcms/AndroidStudio/PIZCms/app/src/androidTest/java/com/pppiziot/www/pizcms/: ExampleInstrumentedTest.java
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/: AndroidManifest.xml
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/cpp/app/: piziot_core_app.cpp  piziot_core_app.h
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/cpp/libpiziot/: piziot_core_cms.cpp  piziot_p2p_common.cpp
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/java/com/pppiziot/www/libpiziot/: jpiziot_core_cms.java  jpiziot_file_avi.java  jpiziot_os.java  jpiziot_p2p_client.java  jpiziot_p2p_device.java
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/java/com/pppiziot/www/pizcms/: MainActivity.java
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/res/: piziot.xcf
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/res/layout/: activity_main.xml  content_main.xml
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/res/menu/: menu_main.xml
workspace/pizcms/AndroidStudio/PIZCms/app/src/main/res/values/: strings.xml
workspace/pizcms/AndroidStudio/PIZCms/app/src/test/java/com/pppiziot/www/pizcms/: ExampleUnitTest.java
workspace/pizcms/Linux/: .cproject  .project
workspace/piznas/Linux/: .cproject  .project
(+884 files in other folders)
